fix(build): fork sbt run across all components so it stays alive